--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,33 +1,34 @@
 #This is a basic workflow to help you get started with Actions
 
-name: Build docker image
+name: Build-docker-image
 
 # Controls when the action will run.
 on:
   release:
-
+    branches:
+      - "worldserver"
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-20.04
     if: github.ref == 'refs/heads/worldserver'
     steps:
       - uses: actions/checkout@v2
       -
         name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v5
       -
         name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v5
       -
         name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v5
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
