--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,16 +1,17 @@
 #This is a basic workflow to help you get started with Actions
 
-name: Build-docker-image
+name: Build docker image
 
 # Controls when the action will run.
 on:
-  release:
+  push:
     branches:
       - "worldserver"
+  release:
+    types: [published]
 jobs:
   docker:
     runs-on: ubuntu-20.04
-    if: github.ref == 'refs/heads/worldserver'
     steps:
       - uses: actions/checkout@v2
       -
