--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,8 +5,6 @@ name: Build docker image
 # Controls when the action will run.
 on:
   push:
-    branches:
-      - "worldserver"
   release:
     types: [published]
 jobs:
@@ -27,13 +25,17 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y%m%d')"
+      -
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
-          tags: jackhein/murlocvillage_worldserver:echo "::set-env name=NOW::$(date +'%Y%m%d.%H%M%S')"
+          tags: jackhein/murlocvillage_worldserver:${{ steps.date.outputs.date }}
           push: true
       -
         name: Image digest
